
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef scalar_t__ uint8 ;
typedef int BOOL ;


 int False ;
 scalar_t__ ISO_PDU_CC ;
 int ISO_PDU_CR ;
 int True ;
 int error (char*,scalar_t__) ;
 int * iso_recv_msg (scalar_t__*) ;
 int iso_send_msg (int ) ;
 int tcp_connect (char*) ;
 int tcp_disconnect () ;

BOOL
iso_connect(char *server)
{
 uint8 code;

 if (!tcp_connect(server))
  return False;

 iso_send_msg(ISO_PDU_CR);

 if (iso_recv_msg(&code) == ((void*)0))
  return False;

 if (code != ISO_PDU_CC)
 {
  error("expected CC, got 0x%x\n", code);
  tcp_disconnect();
  return False;
 }

 return True;
}
